fix: Adjust 'X' close button border so that contrast is 3:1.

--- a/core/css/inputs.scss
+++ b/core/css/inputs.scss
@@ -93,18 +93,17 @@ button:not(
 		.primary
 	) {
 		&:not(.app-navigation-entry-button) {
+			&:hover,
 			&:focus,
 			&.active {
 				/* active class used for multiselect */
+				border-color: var(--color-primary-element);
 				outline: none;
 			}
 			&:active {
 				outline: none;
 				background-color: var(--color-main-background);
 				color: var(--color-main-text);
-			}
-			&:hover{
-				border-color: var(--color-primary-element);
 			}
 		}
 		&:focus-visible {
